# AwdClient

./: .gitignore  CMakeLists.txt  README.md  main.cpp
game/: FatalErrors.hpp  Game.cpp  Game.hpp  GameState.hpp
game/config/: ConfigManager.cpp  ConfigManager.hpp  DumbYamlReader.cpp  DumbYamlReader.hpp  GameConfig.cpp  GameConfig.hpp  PhysicsConfig.cpp  PhysicsConfig.hpp
game/entity/: Entities.hpp  Entity.cpp  Entity.hpp  EntityPlayer.cpp  EntityPlayer.hpp  EntityStateSnapshot.hpp  Fallable.cpp  Fallable.hpp  FallableLivingEntity.cpp  FallableLivingEntity.hpp  LivingEntity.cpp  LivingEntity.hpp
game/graphics/: Button.cpp  ColorSet.cpp  Drawable.cpp  Drawable.hpp  FontManager.cpp  WaterBackground.cpp  WaterBackground.hpp
game/lobby/: Lobby.hpp
game/packetlistener/: CreateLobbyResponseListener.cpp  CreateLobbyResponseListener.hpp  HandshakeResponseListener.cpp  HandshakeResponseListener.hpp  JoinLobbyResponseListener.cpp  JoinLobbyResponseListener.hpp  KickedFromLobbyListener.cpp  KickedFromLobbyListener.hpp  LeaveLobbyResponseListener.cpp  LeaveLobbyResponseListener.hpp  PacketListener.hpp  PingListener.cpp  PingListener.hpp  UpdatedMembersListListener.cpp  UpdatedMembersListListener.hpp
game/profiling/: FpsMeter.cpp  FpsMeter.hpp  TpsMeter.cpp  TpsMeter.hpp
game/screen/: Button.cpp  Button.hpp  Screen.cpp  Screen.hpp  ScreenComponent.cpp  ScreenComponent.hpp
game/sound/: Sound.cpp  Sound.hpp  SoundManager.cpp  SoundManager.hpp  SoundSystem.cpp  SoundSystem.hpp
game/util/: CrashReporter.cpp  CrashReporter.hpp  ImageUtils.cpp  ImageUtils.hpp  MathUtils.cpp  MathUtils.hpp  RenderUtils.cpp  (+5 more)
net/: NetworkHandle.cpp  NetworkHandle.hpp  NetworkService.cpp  NetworkService.hpp  PacketContainer.cpp  PacketContainer.hpp  PacketManager.cpp  PacketManager.hpp  PacketTransformer.cpp  PacketTransformer.hpp  SequenceNumberMath.cpp  SequenceNumberMath.hpp  UdpClient.cpp  UdpClient.hpp  client.hpp  packets.proto  ptrans.cpp  ptrans.hpp
scripts/: 0_on_proto_files_change.bat  compile_proto_files_for_java.bat  run-awd-ptrans-codegen.bat  ПОЯСНЕНИЕ.txt
(+182 files in other folders)
